--- a/taller2/angular.json
+++ b/taller2/angular.json
@@ -25,9 +25,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
-            ],
-            "scripts": []
+              ],
+              "scripts": []
           },
           "configurations": {
             "production": {
@@ -94,5 +96,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7cc79eaa-b680-4b41-a74e-cf8a6aa35431"
   }
 }
